--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <h1>Välkommen till min sida</h1>
+    <h1>Full report and screenshots</h1>
 
-    <h2>PDF-visare</h2>
-    <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=C:\Users\wilkar11\Desktop\till gpt\.pdf" width="100%" height="600px"></iframe>
+    <h2>PDF:</h2>
+    <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=C:\Users\wilkar11\Desktop\till gpt\FullReport.pdf" width="100%" height="600px"></iframe>
 
-    <h2>Bilder</h2>
+    <h2>Screenshots:</h2>
     <img src="path/to/image1.jpg" alt="Beskrivning av bild 1">
     <img src="path/to/image2.jpg" alt="Beskrivning av bild 2">
 
