--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <h1>PDF-visare</h1>
-    <iframe class="pdf-viewer" src="https://mozilla.github.io/pdf.js/web/viewer.html?file=FullReport.pdf"></iframe>
+    <iframe class="pdf-viewer" src="https://raw.githubusercontent.com/willekaninte/willekaninte.github.io/main/FullReport.pdf"></iframe>
 
     <script>
         // JavaScript för att hantera bildvisning eller andra interaktioner kan läggas till här
